--- a/ComputerWebsite/index.html
+++ b/ComputerWebsite/index.html
@@ -7,6 +7,7 @@
     <title>Computer Parts Store</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="header">
@@ -39,7 +40,7 @@
     </div>
     </div>
 
-    <!------------categories-------------------->
+   
 
  <div class="Pc Parts">
     <div class="small-container">
@@ -56,6 +57,82 @@
          </div>
     </div>
  </div>
+
+   
+    <div class="small container">
+        <h2 class="title">Featured Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="ComputerParts/Glorious-ModelD.jpeg">
+                <h4>Glorious Model D Mouse</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$59</p>
+            </div>
+            <div class="col-4">
+                <img src="ComputerParts/msib450carbon.png">
+                <h4>MSI b450 Carbon</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$110</p>
+            </div>
+            <div class="col-4">
+                <img src="ComputerParts/nzxt-h510-black.jpg">
+                <h4>NZXT H510 Black</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$69</p>
+            </div>
+        </div>
+        <h2 class="title">Latest Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="ComputerParts/logitech-GPro-Keyboard.jpeg">
+                <h4>Logitech G-Pro Keyboard</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$80</p>
+            </div>
+            <div class="col-4">
+                <img src="ComputerParts/Aorus-3090.png">
+                <h4>Gigabyte Aorus RTX 3090</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$999</p>
+            </div>
+        </div>
+    </div>
+
+<!--------Limited-offer----------------->
+
+    <div class="offer">
+        
+    </div>
 
 </body>
 </html>
