--- a/tongol-a/university/about.html
+++ b/tongol-a/university/about.html
@@ -69,14 +69,14 @@
                 <span>August 26</span>
             </div>
             <div>
-                <a href="news3.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
-                <span>August 10</span>
+                <a href="news4.html" class="red-btn"><span>HAU-IRB receives PHREB Level 2 Accreditation</span></a>
+                <span>August 18</span>
             </div>
             <div>
-                <a href="news4.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
-                <span>42</span>
+                <a href="news3.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
+                <span>August 10</span>
             </div>                  
-        </div>
+        </div>    
     </div>
 </section>
 
