--- a/tongol-a/university/news2.html
+++ b/tongol-a/university/news2.html
@@ -31,7 +31,7 @@
                     <li><a href="course.html">ACADEMICS</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="login.html">LOGIN</a></li>
+                    <li><a href="login_form.php">LOGIN</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
