--- a/ComputerWebsite/index.html
+++ b/ComputerWebsite/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Parts Store</title>
@@ -17,7 +18,7 @@
                 <img src="ComputerParts/PCLogo.jpeg" width="125px">
             </div>
             <nav>
-                <ul>
+                <ul id="Menu">
                     <li><a href="">Home</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">About</a></li>
@@ -26,6 +27,7 @@
                 </ul>
             </nav>
             <img src="ComputerParts/basket-cart.png" width="30px" height="30px">
+            <img src="ComputerParts/Menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="col-2">
@@ -52,7 +54,7 @@
              <img src="ComputerParts/DeepcoolPowerSupply.png">
             </div>
             <div class="col-3">
-             <img src="ComputerParts/i9-11thgen.jpeg">
+             <img src="ComputerParts/AMD-Ryzen-5000-Series-Ryzen-9.png">
             </div>
          </div>
     </div>
@@ -128,11 +130,93 @@
         </div>
     </div>
 
-<!--------Limited-offer----------------->
-
     <div class="offer">
-        
+        <div class="small-container">
+            <div class="row">
+                <div class="col-2">
+                    <img src="ComputerParts/God-of-War-PC.jpg" class="offer-img">
+                </div>
+                <div class="col-2">
+                    <p>Only Available here in our store</p>
+                    <h1>NZXT God of War PC</h1>
+                    <a href="" class="btn">Buy Now &#8594;</a>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="brands">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-5">
+                    <img src="ComputerParts/aorus.png">
+                </div>
+                <div class="col-5">
+                    <img src="ComputerParts/logitech_logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="ComputerParts/MSI-Logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="ComputerParts/Corsair-logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="ComputerParts/NZXT.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Download the App</h3>
+                    <p>Available for iOS and Android</p>
+                    <div class="app-logo">
+                        <img src="ComputerParts/app-store-png-logo-33123.png">
+                    </div>
+                </div>
+                <div class="footer-col-2">
+                    <h3>REMINDER</h3>
+                    <p>We are here to serve you properly and prioritize your Computer Upgrades or Needs.</p>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Notice</h3>
+                    <ul>
+                        <li>Coupons</li>
+                        <li>Promo</li>
+                        <li>Warranty</li>
+                    </ul>
+                </div>
+                <div class="footer-col-4">
+                    <h3>Socials</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <p class="Copyright">Copyright 2022</p>
+        </div>
+    </div>
+
+    <script>
+        var Menu = document.getElementById("Menu");
+        Menu.style.maxHeight = "0px";
+        function menutoggle(){
+            if(Menu.style.maxHeight == "0px")
+            {
+                Menu.style.maxHeight = "200px";
+            }
+            else
+            {
+                Menu.style.maxHeight = "0px";
+            }
+        }
+    </script>
 
 </body>
 </html>
