--- a/ComputerWebsite/products.html
+++ b/ComputerWebsite/products.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="header">
+   
     <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -29,40 +29,25 @@
             <img src="ComputerParts/basket-cart.png" width="30px" height="30px">
             <img src="ComputerParts/Menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
-        <div class="row">
-            <div class="col-2">
-                <h1>PC Parts Available</h1>
-                <p>New and powerful computer system parts ready for superb gaming experience.</p>
-                <a href="" class="btn">Explore Now &#8594;</a>
-            </div>
-            <div class="col-2">
-                <img src="ComputerParts/EVGA_Nvidia_GeForce_RTX_3090_deal_sale_GPU.jpg" alt="">
-            </div>
+       
         </div>
     </div>
     </div>
 
    
-
- <div class="Pc Parts">
     <div class="small-container">
-        <div class="row">
-            <div class="col-3">
-             <img src="ComputerParts/CorsairRam.jpeg">
-            </div>
-            <div class="col-3">
-             <img src="ComputerParts/DeepcoolPowerSupply.png">
-            </div>
-            <div class="col-3">
-             <img src="ComputerParts/AMD-Ryzen-5000-Series-Ryzen-9.png">
-            </div>
-         </div>
-    </div>
- </div>
+        
+        <div class="row row-2">
+            <h2>All Products Available</h2>
+            <select>  
+                <option>Default Sorting</option>
+                <option>Sort by price</option>
+                <option>Sort by sale</option>
+                <option>Sort by rating</option>
+            </select>
+        </div>
 
-   
-    <div class="small container">
-        <h2 class="title">Featured Products</h2>
+
         <div class="row">
             <div class="col-4">
                 <img src="ComputerParts/Glorious-ModelD.jpeg">
@@ -101,7 +86,6 @@
                 <p>$69</p>
             </div>
         </div>
-        <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-4">
                 <img src="ComputerParts/logitech-GPro-Keyboard.jpeg">
@@ -127,43 +111,64 @@
                 </div>
                 <p>$999</p>
             </div>
-        </div>
-    </div>
-
-    <div class="offer">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-2">
-                    <img src="ComputerParts/God-of-War-PC.jpg" class="offer-img">
+            <div class="col-4">
+                <img src="ComputerParts/arctis5.png">
+                <h4>Steelseries Arctis 5</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
                 </div>
-                <div class="col-2">
-                    <p>Only Available here in our store</p>
-                    <h1>NZXT God of War PC</h1>
-                    <a href="" class="btn">Buy Now &#8594;</a>
-                </div>
+                <p>$59</p>
             </div>
         </div>
-    </div>
-
-    <div class="brands">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-5">
-                    <img src="ComputerParts/aorus.png">
+        <div class="row">
+            <div class="col-4">
+                <img src="ComputerParts/Corsairk70mk2png.png">
+                <h4>Corsair K70 Keyboard MK2</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <div class="col-5">
-                    <img src="ComputerParts/logitech_logo.png">
-                </div>
-                <div class="col-5">
-                    <img src="ComputerParts/MSI-Logo.png">
-                </div>
-                <div class="col-5">
-                    <img src="ComputerParts/Corsair-logo.png">
-                </div>
-                <div class="col-5">
-                    <img src="ComputerParts/NZXT.png">
-                </div>
+                <p>$89</p>
             </div>
+            <div class="col-4">
+                <img src="ComputerParts/CoolerMaster-h500.png">
+                <h4>CoolerMaster Mastercase H500</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                <p>$59</p>
+            </div>
+            <div class="col-4">
+                <img src="ComputerParts/HyperxPredator-8gbRam.png">
+                <h4>Kingston HyperX  Predator 8gb DDR4</h4>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                <p>$49</p>
+            </div>
+        </div>
+
+        <div class="page-btn">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span> 
+            <span>4</span>
+            <span>&#8594;</span> 
         </div>
     </div>
 
