starting connecting to database

--- a/OnePiece-Ep1.html
+++ b/OnePiece-Ep1.html
@@ -43,8 +43,7 @@
 <main class="container">
          <section class="main-video">
             <!--Change video iframe here-->
-            <iframe src="//gogohd.net/streaming.php?id=MzUxOA==&amp;title=One+Piece+Episode+1&amp;typesub=SUB" allowfullscreen="true" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
-            <!--Change video iframe here-->
+            <iframe src="https://gogohd.net/streaming.php?id=MzUxOA==&amp;title=One+Piece+Episode+1&amp;typesub=SUB" frameborder="0"></iframe>
          </section>
          
          <section class="video-playlist">
