--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="r-image"> 
         <img src="img/animes/preview/Onepiece-card.jpg" alt="">
         <div class="r-details">
-          <a href="template.html">One Piece:</a>
+          <a href="OnePiece-Ep1.html">One Piece:</a>
           <a href="#">Episode 10</a>
         </div>
         <!-- recently detials end here-->
