--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,6 @@
               <li><a href="template.html">List</a></li>
               <li><a href="login.html">Login</a></li>
            </div>
-           <!--Search bar-->
            <div class="search-icon">
               <span class="fas fa-search"></span>
            </div>
@@ -38,10 +37,8 @@
               <input type="search" class="search-data" placeholder="Search" required>
               <button type="submit" class="fas fa-search"></button>
            </form>
-            <!--Search bar-->
         </nav>
         </header>
-        
         <div class="loginform">
          <h1>OtakuHaven</h1>
          <form method="post">
@@ -51,13 +48,24 @@
              <label>Username</label>
            </div>
            <div class="txt_field">
+            <input type="text" name ="email" required>
+            <span></span>
+            <label>Email</label>
+          </div>
+           <div class="txt_field">
              <input type="password"name ="password"  required>
              <span></span>
              <label>Password</label>
            </div>
-           <input type="submit" value="Login">
+           <div class="txt_field">
+            <input type="cpassword"name ="cpassword"  required>
+            <span></span>
+            <label>Confirm Password</label>
+          </div>
+           
+           <input type="submit" value="Signup">
            <div class="signup_link">
-             Not a Member? <a href="signup.html">Signup</a>
+             Already a Member? <a href="login.html">Login Now</a>
            </div>
          </form>
        </div>  
