--- a/ComputerWebsite/index.html
+++ b/ComputerWebsite/index.html
@@ -15,18 +15,18 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="ComputerParts/PCLogo.jpeg" width="125px">
+                <a href="index.html"><img src="ComputerParts/PCLogo.jpeg" width="125px"></a>
             </div>
             <nav>
                 <ul id="Menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="ComputerParts/basket-cart.png" width="30px" height="30px">
+            <a href="cart.html"><img src="ComputerParts/basket-cart.png" width="30px" height="30px"></a>
             <img src="ComputerParts/Menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
@@ -65,16 +65,16 @@
         <h2 class="title">Featured Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="ComputerParts/Glorious-ModelD.jpeg">
-                <h4>Glorious Model D Mouse</h4>
+                <a href="product-details.html"><img src="ComputerParts/Aorus-z490.jpeg"></a>
+                <h4>Gigabyte Aorus Z490 Master Motherboard</h4>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <p>$59</p>
+                <p>$120</p>
             </div>
             <div class="col-4">
                 <img src="ComputerParts/msib450carbon.png">
