--- a/ardales-c-PixelArtGallery/index.html
+++ b/ardales-c-PixelArtGallery/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html" class="nav__container">EGATOR</a>
+            <a href="index.html" class="nav__container">Clint Ardales</a>
             <ul class="nav__items">
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
@@ -26,7 +26,7 @@
                     </div>
                     <ul>
                         <li><a href="dashboard.html">Dashboard</a></li>
-                        <li><a href="logout.html">Dashboard</a></li>
+                        <li><a href="logout.html">Logout</a></li>
                     </ul>
                 </li>
             </ul>
