Added Featured Section

--- a/ardales-c-PixelArtGallery/index.html
+++ b/ardales-c-PixelArtGallery/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="./style.css">
     <!-- ICONSCOUT CDN STYLESHEET -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <!-- GOOGLE FONT MONTSERRAT -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html" class="nav__container">Clint Ardales</a>
+            <a href="index.html" class="nav__container">CLINT ARDALES</a>
             <ul class="nav__items">
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
@@ -36,5 +38,30 @@
         </div>
     </nav>
     <!--=============== END OF NAV ==================-->
+    
+    <section class="featured">
+        <div class="container featured__container">
+            <div class="post__thumbnail">
+                <img src="./images/blog1.jpg">
+            </div>
+            <div class="post__info">
+                <a href="" class="category__button">Wild Life</a>
+                <h2 class="post__title"><a href="post.html">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla?</a></h2>
+                <p class="post__body"> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nam autem dolor ut vitae quo exercitationem repellat, debitis inventore, eaque magni ducimus assumenda magnam, nihil perferendis hic alias libero? Accusamus?
+                </p>
+            </div>
+            <div class="post__author">
+                <div class="post__author-avatar">
+                    <img src="./images/avatar2.jpg">
+                </div>
+                <div class="post__author-info">
+                    <h5>By: Jane Doe</h5>
+                    <small>June 10, 2022 - 07:23</small>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================== END OF NAV ====================-->
 </body>
 </html>
