--- a/policarpio-ag-blog/index.html
+++ b/policarpio-ag-blog/index.html
@@ -19,7 +19,7 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="#" class="logo">Jumpman's</a>
+    <a href="#" class="logo">Jumpman's Archives</a>
 
     <nav class="navbar">
         <a href="#featured">featured</a>
