Contact Us page done

--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html" >Available Parts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" >Contact Us</a>
+            <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html" >Contact Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html" >Sign Up / Login</a>
