--- a/bondoc-do-automotivePartsEcommerceSite/login-signup.html
+++ b/bondoc-do-automotivePartsEcommerceSite/login-signup.html
@@ -330,7 +330,11 @@
 
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">Home</a>
+            <a
+              href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+              class="nav-link px-2 text-muted"
+              >Home</a
+            >
           </li>
           <li class="nav-item">
             <a
