--- a/index.html
+++ b/index.html
@@ -36,5 +36,17 @@
         <a href="book-form" class="btn">book now</a>
        
     </header>
+<section class="home" id="home">
+    <div class="content">
+        <span>follow us</span>
+        <h3>
+            www.facebook.com/kaizerev7o
+        </h3>
+        <p>to punish and enslave</p>
+        <a href="#" class="btn">book now</a>
+    </div>
+
+</section>
+
 </body>
 </html>
