--- a/index.html
+++ b/index.html
@@ -36,15 +36,35 @@
         <a href="book-form" class="btn">book now</a>
        
     </header>
+    <!--homeA1-->
 <section class="home" id="home">
     <div class="content">
-        <span>follow us</span>
+        <span>follow us on facebook</span>
         <h3>
             www.facebook.com/kaizerev7o
         </h3>
         <p>to punish and enslave</p>
         <a href="#" class="btn">book now</a>
     </div>
+
+</section>
+<!--booking form-->
+<section class="book-form" id="book-form">
+    <form action="">
+        <div class="inputBox">
+            <span>where to?</span>
+            <input type="text" placeholder="place name" value="">
+    </div>
+    <div class="inputBox">
+        <span>when?</span>
+        <input type="datetime" value="">
+    </div>
+    <div class="inputBox">
+        <span>how many?</span>
+        <input type="number" placeholder="number of travelers" value="">
+    </div>
+        <input type="submit" value="find now" class="btn">
+    </form>
 
 </section>
 
