--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="inputBox">
         <span>when?</span>
-        <input type="datetime" value="">
+        <input type="date" value="">
     </div>
     <div class="inputBox">
         <span>how many?</span>
@@ -65,6 +65,27 @@
     </div>
         <input type="submit" value="find now" class="btn">
     </form>
+
+</section>
+
+<!--about-->
+<section class="about" id="about">
+    <div class="video-files">
+        <video src="videos/VT1.mp4" muted autoplay loop class="video"></video>
+    <div class="controls">
+         <span class="control-btn" data-src="videos/VT1.mp4"></span>
+         <span class="control-btn" data-src="videos/VT1.mp4"></span>
+         <span class="control-btn" data-src="videos/VT1.mp4"></span>
+        </div>
+        
+    </div>
+
+    <div class="content">
+        <span>in LosParaiso</span>
+        <h3>Amazing experience is waiting for you.</h3>
+        <p>come and test text _________ sssss</p>
+        <a href="#" class="btn">read more</a>
+    </div>
 
 </section>
 
