--- a/armas-j-losparaiso/index.html
+++ b/armas-j-losparaiso/index.html
@@ -17,7 +17,9 @@
 
     </head>
 <body>
-    <!-- header section -->
+<!--audiobgm-->
+
+<!-- header section -->
     <header class="header">
         <div id="menu-btn" class="fas fa-bars"></div>
       
@@ -48,6 +50,8 @@
     </div>
 
 </section>
+
+
 <!--booking form-->
 <section class="book-form" id="book-form">
     <form action="">
@@ -88,6 +92,16 @@
     </div>
 
 </section>
+
+<!--audiotestbgm-->
+<iframe src="audiobgm/bgmloop.mp3" allow="autoplay" id="audio" hidden ></iframe>
+    <!-- <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none;"></iframe> -->
+    <audio id="player" autoplay>
+        <source src="audiobgm/bgmloop.mp3" type="audio/mpeg" />
+        <source src="audiobgm/bgmloop.ogg" type="audio/ogg" />
+        <source src="audiobgm/bgmloop.wav" type="audio/wav" />
+    </audio>
+<!--endaudiotestbgm-->
 
 </body>
 </html>
