--- a/armas-j-losparaiso/index.html
+++ b/armas-j-losparaiso/index.html
@@ -73,11 +73,11 @@
 <!--about-->
 <section class="about" id="about">
     <div class="video-files">
-        <video src="videos/VT1.mp4" muted autoplay loop class="video"></video>
+        <video src="video/VT1.mp4" muted autoplay loop class="video"></video>
     <div class="controls">
-         <span class="control-btn" data-src="videos/VT1.mp4"></span>
-         <span class="control-btn" data-src="videos/VT1.mp4"></span>
-         <span class="control-btn" data-src="videos/VT1.mp4"></span>
+         <span class="control-btn" data-src="video/VT2.mp4"></span>
+         <span class="control-btn" data-src="video/VT3.mp4"></span>
+         <span class="control-btn" data-src="video/VT4.mp4"></span>
         </div>
         
     </div>
