added about page content

--- a/malonzo-lm-FoodBlog/about.html
+++ b/malonzo-lm-FoodBlog/about.html
@@ -22,18 +22,23 @@
             </div>
        </nav>
        <!-- end of header -->
-       <section class = "about" id = "about">
-        <div class = "container">
-          <div class = "about-content">
-            <div class = "about-text">
-              <div class = "title">
-                <h2></h2>
-              </div>
-              <p></p>
+        <div class="about-section">
+            <h1>About Page</h1>
+        </div>
+      
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="images/me.jpg" alt="" style="width:100%">
+            <div class="container">
+              <h2>Lyka Malonzo</h2>
+              <p class="title">Blog Creator</p>
+              <p>A fourth year college student taking up Computer Engineering.</p>
+              <p>This blog is a project for the following course subjects: Embedded, Comparcorg, and ComparcorgL.</p>
+              <p><button class="button"><a href="https://www.facebook.com/lykamarie.malonzo/">Contact</a></button></p>
             </div>
           </div>
         </div>
-      </section>
       
    
     </body>
