--- a/malonzo-lm-FoodBlog/food.html
+++ b/malonzo-lm-FoodBlog/food.html
@@ -28,43 +28,48 @@
             <div class = "food-text">
                     <h2>Some of the BEST DISHES to eat in the Philippines</h2>
                     <p>Filipino cuisine has recently been tagged as the ‘next big thing’ to look out for in the culinary world. With the country’s variety of influences throughout its rich history, its traditional cooking techniques, and the Filipinos’ knack for combining flavours and making the most of any and all ingredients at their disposal, what results is unpretentious, no-frills food that’s simply delicious.</p>
-                        <div class = "food-content">
-                            <!-- item -->
-                            <div class = "food-item">
-                                <div class = "food-text">
-                                    <h2>ADOBO</h2>
-                                    <p>It’s the Filipino dish everybody knows — the mighty adobo. It is made by stewing meat (usually chicken, pork, or a combination of both) in soy sauce and vinegar, adding peppercorns and bay leaves for that special flavour. Bonus leftovers tip: pull the meat from the bone and fry ’til crispy for some tasty adobo flakes.</p>
-                                </div>
-                                <div class = "food-img">
-                                    <img src = "images/adobo.jpg" alt = "">
-                                </div>
+                    <div class = "food-content">
+                        <!-- item -->
+                        <div class="row">
+                          <div class="column">
+                            <div class="card">
+                              <img src="images/adobo.jpg" alt="" style="width:100%">
+                              <div class="container">
+                                <h2>ADOBO</h2>
+                                <p>It’s the Filipino dish everybody knows — the mighty adobo. It is made by stewing meat (usually chicken, pork, or a combination of both) in soy sauce and vinegar, adding peppercorns and bay leaves for that special flavour. Bonus leftovers tip: pull the meat from the bone and fry ’til crispy for some tasty adobo flakes.</p>
+                              </div>
                             </div>
+                          </div> 
                         </div>
-                        <div class = "food-content">
-                            <!-- item -->
-                            <div class = "food-item">
-                                <div class = "food-text">
-                                    <h2>KARE-KARE</h2>
-                                    <p>This rich stew is made with peanut sauce and, customarily, oxtail, but other meatier cuts of beef can also be added in. Many Filipinos will consider kare-kare incomplete without a serving of bagoong (fermented seafood paste) on the side.</p>
-                                </div>
-                                <div class = "food-img">
-                                    <img src = "images/kare-kare.jpg" alt = "">
-                                </div>
+                    </div>
+                    <div class = "food-content">
+                        <!-- item -->
+                        <div class="row">
+                          <div class="column">
+                            <div class="card">
+                              <img src="images/kare-kare.jpg" alt="" style="width:100%">
+                              <div class="container">
+                                <h2>KARE-KARE</h2>
+                                <p>This rich stew is made with peanut sauce and, customarily, oxtail, but other meatier cuts of beef can also be added in. Many Filipinos will consider kare-kare incomplete without a serving of bagoong (fermented seafood paste) on the side.</p>
+                              </div>
                             </div>
+                          </div> 
                         </div>
-                        <div class = "food-content">
-                            <!-- item -->
-                            <div class = "food-item">
-                                <div class = "food-text">
-                                    <h2>LECHON</h2>
-                                    <p>One of the top contenders among the best Filipino dishes (alongside adobo) is perhaps the famous lechon. After all, it is hard to top a tasty, fully-roasted pig with perfectly crisp skin and juicy meat. Find the best of this sinful treat on the island of Cebu, but this is almost always served at any grand Pinoy gathering or fiesta.</p>
-                                </div>
-                                <div class = "food-img">
-                                    <img src = "images/lechon.jpg" alt = "">
-                                </div>
+                    </div>   
+                    <div class = "food-content">
+                        <!-- item -->
+                        <div class="row">
+                          <div class="column">
+                            <div class="card">
+                              <img src="images/lechon.jpg" alt="" style="width:100%">
+                              <div class="container">
+                                <h2>LECHON</h2>
+                                <p>One of the top contenders among the best Filipino dishes (alongside adobo) is perhaps the famous lechon. After all, it is hard to top a tasty, fully-roasted pig with perfectly crisp skin and juicy meat. Find the best of this sinful treat on the island of Cebu, but this is almost always served at any grand Pinoy gathering or fiesta.</p>
+                              </div>
                             </div>
+                          </div> 
                         </div>
-            
+                    </div>  
             </div>
         </div>
     </div>
