--- a/malonzo-lm-FoodBlog/index.html
+++ b/malonzo-lm-FoodBlog/index.html
@@ -32,69 +32,78 @@
         <!-- end of header -->
         <div class = "food-content">
             <!-- item -->
-            <div class = "food-item">
-              <div class = "food-text">
-                <h2>Filipino Cuisine</h2>
-                <p>The Filipino foods we eat today are a direct fusion of indigenous ingredients, flavours, and outside influence. With such a wide geography and rich indigenous history, each area of the Philippines reflects these influences in local variations of popular dishes.</p>
-                <a href = "food.html">Read More</a>
-              </div>
-              <div class = "food-img">
-                <img src = "images/filipino-cuisine.jpg" alt = "">
-              </div>
-              
+            <div class="row">
+              <div class="column">
+                <div class="card">
+                  <img src="images/filipino-cuisine.jpg" alt="" style="width:100%">
+                  <div class="container">
+                    <h2>Filipino Cuisine</h2>
+                    <p>The Filipino foods we eat today are a direct fusion of indigenous ingredients, flavours, and outside influence. With such a wide geography and rich indigenous history, each area of the Philippines reflects these influences in local variations of popular dishes.</p>
+                    <p><button class="button"><a href = "food.html">Read More</a></button></p>
+                  </div>
+                </div>
+              </div> 
             </div>
         </div>
         <div class = "food-content">
             <!-- item -->
-            <div class = "food-item">
-              <div class = "food-text">
-                <h2>Chinese Cuisine</h2>
-                <p>Chinese food, rich and colorful, has diversified color, aromatic flavor, and excellent taste as its main features. With these three characteristics, it is not only tasty but also a work of art for people to appreciate.</p>
-                <a href = "food.html">Read More</a>
-              </div>
-              <div class = "food-img">
-                <img src = "images/chinese-cuisine.jpg" alt = "">
-              </div>
+            <div class="row">
+              <div class="column">
+                <div class="card">
+                  <img src="images/chinese-cuisine.jpg" alt="" style="width:100%">
+                  <div class="container">
+                    <h2>Chinese Cuisine</h2>
+                    <p>Chinese food, rich and colorful, has diversified color, aromatic flavor, and excellent taste as its main features. With these three characteristics, it is not only tasty but also a work of art for people to appreciate.</p>
+                    <p><button class="button"><a href = "food.html">Read More</a></button></p>
+                  </div>
+                </div>
+              </div> 
             </div>
         </div>
         <div class = "food-content">
-            <!-- item -->
-            <div class = "food-item">
-              <div class = "food-text">
-                <h2>Japanese Cuisine</h2>
-                <p>Japanese cuisine is known for its beauty and delightful subtle flavors. Traditional Japanese fare always manages to look like a work of art, since it is based on washoku. Apart from that, it's incredibly healthy as well, which is deemed the reason why Japanese people live a long life.</p>
-                <a href = "food.html">Read More</a>
+          <!-- item -->
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="images/japanese-cuisine.jpg" alt="" style="width:100%">
+                <div class="container">
+                  <h2>Japanese Cuisine</h2>
+                  <p>Japanese cuisine is known for its beauty and delightful subtle flavors. Traditional Japanese fare always manages to look like a work of art, since it is based on washoku. Apart from that, it's incredibly healthy as well, which is deemed the reason why Japanese people live a long life.</p>
+                  <p><button class="button"><a href = "food.html">Read More</a></button></p>
+                </div>
               </div>
-              <div class = "food-img">
-                <img src = "images/japanese-cuisine.jpg" alt = "">
-              </div>
-            </div>
+            </div> 
+          </div>
         </div>
         <div class = "food-content">
-            <!-- item -->
-            <div class = "food-item">
-              <div class = "food-text">
-                <h2>Korean Cuisine</h2>
-                <p>Korean food tends to be intensely flavoured, spicy and pungent. Traditional restaurants often feature charcoal grills in the middle of the table - a type of indoor barbecue.</p>
-                <a href = "food.html">Read More</a>
+          <!-- item -->
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="images/korean-cuisine.jpg" alt="" style="width:100%">
+                <div class="container">
+                  <h2>Korean Cuisine</h2>
+                  <p>Korean food tends to be intensely flavoured, spicy and pungent. Traditional restaurants often feature charcoal grills in the middle of the table - a type of indoor barbecue.</p>
+                  <p><button class="button"><a href = "food.html">Read More</a></button></p>
+                </div>
               </div>
-              <div class = "food-img">
-                <img src = "images/korean-cuisine.jpg" alt = "">
-              </div>
-            </div>
+            </div> 
+          </div>
         </div>
         <div class = "food-content">
-            <!-- item -->
-            <div class = "food-item">
-              <div class = "food-text">
-                <h2>Thai Cuisine</h2>
-                <p>Think of Thai food as an exotic version of Chinese food. It has many similar elements, but some have more extreme flavors such as ultra-sweet, salty or that ultra-spiciness, like Indian foods.</p>
-                <a href = "food.html">Read More</a>
+          <!-- item -->
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="images/thai-cuisine.jpg" alt="" style="width:100%">
+                <div class="container">
+                  <h2>Thai Cuisine</h2>
+                  <p>Think of Thai food as an exotic version of Chinese food. It has many similar elements, but some have more extreme flavors such as ultra-sweet, salty or that ultra-spiciness, like Indian foods.</p>
+                  <p><button class="button"><a href = "food.html">Read More</a></button></p>
+                </div>
               </div>
-              <div class = "food-img">
-                <img src = "images/thai-cuisine.jpg" alt = "">
-              </div>
-            </div>
+            </div> 
+          </div>
         </div>
         <!-- footer -->
         <footer>
