pushing to save changes

--- a/bondoc-do-automotivePartsEcommerceSite/login-signup.html
+++ b/bondoc-do-automotivePartsEcommerceSite/login-signup.html
@@ -175,9 +175,7 @@
             <!-- Email input -->
             <div class="form-outline mb-4">
               <input type="email" id="loginName" class="form-control" />
-              <label class="form-label" for="loginName"
-                >Email or username</label
-              >
+              <label class="form-label" for="loginName">Email</label>
             </div>
 
             <!-- Password input -->
@@ -216,9 +214,6 @@
             </button>
 
             <!-- Register buttons -->
-            <div class="text-center">
-              <p>Not a member? <a href="#!">Register</a></p>
-            </div>
           </form>
         </div>
         <div
@@ -306,7 +301,7 @@
 
             <!-- Submit button -->
             <button type="submit" class="btn btn-primary btn-block mb-3">
-              Sign in
+              Register
             </button>
           </form>
         </div>
