--- a/bondoc-do-automotivePartsEcommerceSite/parts-page.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page.html
@@ -104,7 +104,20 @@
         </div>
       </div>
     </nav>
-
+    <div class="container" style="padding-top: 2rem; padding-bottom: 40rem">
+      <h2 style="padding-bottom: 1rem">You are currently not logged in</h2>
+      <h3>Please login or create a new account to view page</h3>
+      <a
+        href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html"
+        style="
+          padding-top: 2rem;
+          color: rgb(13, 110, 253);
+          font-weight: bold;
+          font-size: large;
+        "
+        >Login/Registration Page</a
+      >
+    </div>
     <div class="container">
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
