added new page placed items inside parts page

--- a/bondoc-do-automotivePartsEcommerceSite/login-signup.html
+++ b/bondoc-do-automotivePartsEcommerceSite/login-signup.html
@@ -204,7 +204,7 @@
 
               <div class="col-md-6 d-flex justify-content-center">
                 <!-- Simple link -->
-                <a href="#!">Forgot password?</a>
+                <!--<a href="#!">Forgot password?</a>-->
               </div>
             </div>
 
