--- a/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html
@@ -105,34 +105,12 @@
       </div>
     </nav>
     <div class="container" style="padding-top: 2rem; padding-bottom: 40rem">
-      <div class="row row-cols-1 row-cols-md-3 g-4" style="padding-bottom: 10rem;">
-      <div class="col">
-        <div class="card">
-          <img src="/bondoc-do-automotivePartsEcommerceSite/images/cr152-image.png" class="card-img-top" alt="Keeway Cafe Racer 152 Parts" />
-          <div class="card-body">
-            <h5 class="card-title">Beneli Cafe Racer 152 Parts</h5>
-            <p class="card-text">
-              Discover pre designed parts for this motorcycle, with downloadable 3d models available. 
-            </p>
-            <p style="color:red"> Modifications to intake airbox is needed for parts installation for this motorcycle</p>
-            <a href="/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html" class="btn btn-primary">See Parts</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="/bondoc-do-automotivePartsEcommerceSite/images/tvs-a180.png" class="card-img-top" alt="TVS Apache 180 Parts" />
-          <div class="card-body">
-            <h5 class="card-title">TVS Apache RTR 180 Parts</h5>
-            <p class="card-text">
-              Discover pre designed parts for this motorcycle, with downloadable 3d models available. 
-            </p>
-            <p style="color:rgb(11, 94, 215)"> Parts for this motorcycle are plug and play</p> <br>
-            <a href="#" class="btn btn-primary">See Parts</a>
-          </div>
-        </div>
-      </div>
-    </div>
+      <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html">Available Products</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Cafe Racer 152</li>
+        </ol>
+      </nav>
     <div class="container">
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
